--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "srmklive/paypal": "~1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
