--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "~1.0"
     },
