--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "google/apiclient": "^2.12.1",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
@@ -14,6 +15,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "niklasravnsborg/laravel-pdf": "^1.5",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "~1.0"
