--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "niklasravnsborg/laravel-pdf": "^1.5",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
-        "srmklive/paypal": "~1.0"
+        "srmklive/paypal": "~1.0",
+        "stripe/stripe-php": "^10.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
