--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "barryvdh/laravel-dompdf": "^2.0",
+        "giggsey/libphonenumber-for-php": "^8.13",
         "google/apiclient": "^2.12.1",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
@@ -17,10 +18,12 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "niklasravnsborg/laravel-pdf": "^1.5",
+        "propaganistas/laravel-phone": "^5.0",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "~1.0",
-        "stripe/stripe-php": "^10.15"
+        "stripe/stripe-php": "^10.15",
+        "willdurand/geocoder": "4.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
